--- a/css/screen.css
+++ b/css/screen.css
@@ -1,3 +1,4 @@
+@import url(http://fonts.googleapis.com/css?family=Arvo);
 /* normalize.css v1.0.1 | MIT License | git.io/normalize */
 /* normalize.css v1.0.1 | HTML5 Display Definitions | MIT License | git.io/normalize */
 /* line 19, ../../debtapp/ext/lib/ruby/gems/1.9.1/gems/compass-normalize-1.4.2/stylesheets/normalize/_html5.scss */
@@ -535,7 +536,7 @@ body {
 
 /* line 6, ../sass/_main.scss */
 body, input, textarea, select {
-  font-family: "American Typewriter";
+  font-family: Arvo, "American Typewriter";
 }
 
 /* line 10, ../sass/_main.scss */
@@ -550,16 +551,23 @@ header {
 }
 
 /* line 19, ../sass/_main.scss */
+footer {
+  padding: 3em 0;
+  background: #1f1609;
+  color: #e7e4df;
+}
+
+/* line 25, ../sass/_main.scss */
 .address {
   float: left;
 }
 
-/* line 23, ../sass/_main.scss */
+/* line 29, ../sass/_main.scss */
 .hours {
   float: right;
 }
 
-/* line 27, ../sass/_main.scss */
+/* line 33, ../sass/_main.scss */
 .logo {
   text-indent: 100%;
   white-space: nowrap;
@@ -570,7 +578,7 @@ header {
   margin: 32px auto;
 }
 
-/* line 39, ../sass/_main.scss */
+/* line 45, ../sass/_main.scss */
 a,
 a:link,
 a:visited {
@@ -578,7 +586,7 @@ a:visited {
   text-decoration: underline;
 }
 
-/* line 46, ../sass/_main.scss */
+/* line 52, ../sass/_main.scss */
 a:hover,
 a:active,
 a:focus {
