--- a/css/screen.css
+++ b/css/screen.css
@@ -568,6 +568,16 @@ footer {
 }
 
 /* line 33, ../sass/_main.scss */
+.hero {
+  clear: both;
+  background: red;
+  min-height: 384px;
+  height: auto !important;
+  height: 384px;
+  background: transparent url(../img/mission.jpg) 50% 50%;
+}
+
+/* line 42, ../sass/_main.scss */
 .logo {
   text-indent: 100%;
   white-space: nowrap;
@@ -578,7 +588,7 @@ footer {
   margin: 32px auto;
 }
 
-/* line 45, ../sass/_main.scss */
+/* line 54, ../sass/_main.scss */
 a,
 a:link,
 a:visited {
@@ -586,7 +596,7 @@ a:visited {
   text-decoration: underline;
 }
 
-/* line 52, ../sass/_main.scss */
+/* line 61, ../sass/_main.scss */
 a:hover,
 a:active,
 a:focus {
