--- a/css/screen.css
+++ b/css/screen.css
@@ -530,7 +530,7 @@ textarea {
 
 /* line 1, ../sass/_main.scss */
 body {
-  background: #e7e4df;
+  background: #f6f5f3;
   color: #1f1609;
 }
 
@@ -551,25 +551,36 @@ header {
 }
 
 /* line 19, ../sass/_main.scss */
-footer {
-  padding: 3em 0;
-  background: #1f1609;
-  color: #e7e4df;
+footer .container {
+  margin-top: 6em;
+  padding: 2em 0;
+  border-top: 4px solid #1f1609;
+  font-size: .8em;
 }
 
-/* line 25, ../sass/_main.scss */
+/* line 27, ../sass/_main.scss */
+.top_bar {
+  overflow: hidden;
+  margin-bottom: 2em;
+  font-size: .8em;
+  text-transform: uppercase;
+}
+
+/* line 34, ../sass/_main.scss */
 .address {
   float: left;
 }
 
-/* line 29, ../sass/_main.scss */
+/* line 38, ../sass/_main.scss */
 .hours {
   float: right;
 }
 
-/* line 33, ../sass/_main.scss */
+/* line 42, ../sass/_main.scss */
 .hero {
   clear: both;
+  overflow: hidden;
+  margin-bottom: 3em;
   background: red;
   min-height: 384px;
   height: auto !important;
@@ -577,18 +588,18 @@ footer {
   background: transparent url(../img/mission.jpg) 50% 50%;
 }
 
-/* line 42, ../sass/_main.scss */
+/* line 53, ../sass/_main.scss */
 .logo {
+  width: 307px;
+  height: 288px;
+  margin: 1.5em auto 0;
   text-indent: 100%;
   white-space: nowrap;
   overflow: hidden;
-  background: transparent url(/img/logo.png) 50% 50%;
-  width: 92px;
-  height: 92px;
-  margin: 32px auto;
+  background: transparent url(../img/logo.png) 50% 50%;
 }
 
-/* line 54, ../sass/_main.scss */
+/* line 65, ../sass/_main.scss */
 a,
 a:link,
 a:visited {
@@ -596,7 +607,7 @@ a:visited {
   text-decoration: underline;
 }
 
-/* line 61, ../sass/_main.scss */
+/* line 72, ../sass/_main.scss */
 a:hover,
 a:active,
 a:focus {
