--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -16,10 +16,19 @@ header {
   text-align: center;
 }
 
-footer {
-  padding: 3em 0;
-  background: $text-color;
-  color: $bg-color;
+footer .container {
+  margin-top: 6em;
+  padding: 2em 0;
+  border-top: 4px solid $text-color;
+  font-size: .8em;
+}
+
+
+.top_bar {
+  overflow: hidden;
+  margin-bottom: 2em;
+  font-size: .8em;
+  text-transform: uppercase;
 }
 
 .address {
@@ -32,6 +41,8 @@ footer {
 
 .hero {
   clear: both;
+  overflow: hidden;
+  margin-bottom: 3em;
   background: red;
   min-height: 384px;
   height:auto !important;
@@ -40,13 +51,13 @@ footer {
 }
 
 .logo {
+  width: 307px;
+  height: 288px;
+  margin: 1.5em auto 0;
   text-indent: 100%;
   white-space: nowrap;
   overflow: hidden;
-  background: transparent url(/img/logo.png) 50% 50%;
-  width: 92px;
-  height: 92px;
-  margin: 32px auto;
+  background: transparent url(../img/logo.png) 50% 50%;
 }
 
 a,
