--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -1,6 +1,6 @@
 @import url(http://fonts.googleapis.com/css?family=Arvo);
 
-$bg-color: #E7E4DF;
+$bg-color: #f6f5f3;
 $text-color: #1F1609;
 $link-color: #D61B24;
 $link-color-hover: lighten($link-color, 25%);
