--- a/css/main.css
+++ b/css/main.css
@@ -1,28 +1,16 @@
-/*! HTML5 Boilerplate v5.0 | MIT License | http://h5bp.com/ */
-
 html {
-    color: #222;
-    font-size: 1em;
-    line-height: 1.4;
+    font-size: 14px;
+    line-height: 1.5;
 }
 
 ::-moz-selection {
-    background: #b3d4fc;
+    background: #00F;
     text-shadow: none;
 }
 
 ::selection {
-    background: #b3d4fc;
+    background: #00F;
     text-shadow: none;
-}
-
-hr {
-    display: block;
-    height: 1px;
-    border: 0;
-    border-top: 1px solid #ccc;
-    margin: 1em 0;
-    padding: 0;
 }
 
 audio,
@@ -44,330 +32,193 @@ textarea {
     resize: vertical;
 }
 
-.browserupgrade {
-    margin: 0.2em 0;
-    background: #ccc;
-    color: #000;
-    padding: 0.2em 0;
+/* User Styles */
+
+html, body, .container {
+  width: 100%;
 }
-
-
-/* ===== Initializr Styles ==================================================
-   Author: Jonathan Verrecchia - verekia.com/initializr/responsive-template
-   ========================================================================== */
 
 body {
-    font: 16px/26px Helvetica, Helvetica Neue, Arial;
+  font-family: 'Open Sans', sans-serif;
+  color: #000;
 }
 
-.wrapper {
+.container {
+  background-color: #FFF;
+}
+
+a {
+  color: #000;
+  text-decoration: none;
+}
+
+a .text {
+  display: inline-block;
+  margin-top: -2px;
+  border-bottom: 2px solid #222;
+}
+
+a:hover .text {
+  margin-top: -3px;
+  border-bottom: 3px solid #000;
+}
+
+a:visited: {
+  color: #00F;
+}
+
+abbr[title] {
+  border: none;
+}
+
+ul {
+  margin: 0;
+  display: block;
+  padding: 0;
+  list-style: none;
+}
+
+.container > * {
+  margin: 0 auto;
+  margin-top: 3em;
+  width: 90%;
+}
+
+section.main > * {
+  margin-top: 3em;
+}
+
+section.main > *:first-child {
+  margin-top: 0;
+}
+
+.logo {
+  background-image: url(../img/vertigo-logo@2x.png);
+  background-size: 275px 180px;
+  width: 275px;
+  height: 180px;
+  margin: 0 auto;
+}
+
+.container .icon {
+  margin-right: 0.75em;
+}
+
+.location a > * {
+  text-align: left;
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.phone {
+  display: inline-block;
+  height: 40px;
+}
+
+.phone a > * {
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.vcard .fn:after,
+.vcard .street-address:after {
+  content: '\000A';
+  white-space: pre; 
+}
+
+.logo {
+  background-image: url(../img/vertigo-logo@2x.png);
+  background-size: 275px 180px;
+  width: 275px;
+  height: 180px;
+  margin: 0 auto;
+}
+
+.social-links {
+}
+
+.social-links li {
+  height: 40px;
+  margin-right: 1em;
+  display: inline-block;
+}
+
+.social-links li:last-child {
+  margin-right: 0;
+}
+
+.social-links li div {
+  vertical-align: middle;
+}
+
+.icon {
+  display: inline-block;
+  background-size: 40px 40px;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 40px;
+  height: 40px;
+}
+
+.icon-pin {
+  background-image: url(../img/icon-pin@2x.png);
+}
+
+.icon-facebook {
+  background-image: url(../img/icon-facebook@2x.png);
+}
+
+.icon-instagram {
+  background-image: url(../img/icon-instagram@2x.png);
+}
+
+.icon-phone {
+  background-image: url(../img/icon-phone@2x.png);
+}
+
+@media (min-width: 600px) {
+  body {
+    background-color: #faf9f5;
+  }
+
+  .container {
+    position: relative;
+    top: 0;
+    padding: 2em;
+    max-width: 600px;
+    border: 2px solid #000;
+    margin: 2em auto;
+  }
+
+  .container > * {
     width: 90%;
-    margin: 0 5%;
-}
-
-/* ===================
-    ALL: Orange Theme
-   =================== */
-
-.header-container {
-    border-bottom: 20px solid #e44d26;
-}
-
-.footer-container,
-.main aside {
-    border-top: 20px solid #e44d26;
-}
-
-.header-container,
-.footer-container,
-.main aside {
-    background: #f16529;
-}
-
-.title {
-    color: white;
-}
-
-/* ==============
-    MOBILE: Menu
-   ============== */
-
-nav ul {
-    margin: 0;
-    padding: 0;
-    list-style-type: none;
-}
-
-nav a {
-    display: block;
-    margin-bottom: 10px;
-    padding: 15px 0;
-
-    text-align: center;
-    text-decoration: none;
-    font-weight: bold;
-
-    color: white;
-    background: #e44d26;
-}
-
-nav a:hover,
-nav a:visited {
-    color: white;
-}
-
-nav a:hover {
-    text-decoration: underline;
-}
-
-/* ==============
-    MOBILE: Main
-   ============== */
-
-.main {
-    padding: 30px 0;
-}
-
-.main article h1 {
-    font-size: 2em;
-}
-
-.main aside {
-    color: white;
-    padding: 0px 5% 10px;
-}
-
-.footer-container footer {
-    color: white;
-    padding: 20px 0;
-}
-
-/* ===============
-    ALL: IE Fixes
-   =============== */
-
-.ie7 .title {
-    padding-top: 20px;
-}
-
-/* ==========================================================================
-   Author's custom styles
-   ========================================================================== */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* ==========================================================================
-   Media Queries
-   ========================================================================== */
-
-@media only screen and (min-width: 480px) {
-
-/* ====================
-    INTERMEDIATE: Menu
-   ==================== */
-
-    nav a {
-        float: left;
-        width: 27%;
-        margin: 0 1.7%;
-        padding: 25px 2%;
-        margin-bottom: 0;
-    }
-
-    nav li:first-child a {
-        margin-left: 0;
-    }
-
-    nav li:last-child a {
-        margin-right: 0;
-    }
-
-/* ========================
-    INTERMEDIATE: IE Fixes
-   ======================== */
-
-    nav ul li {
-        display: inline;
-    }
-
-    .oldie nav a {
-        margin: 0 0.7%;
-    }
-}
-
-@media only screen and (min-width: 768px) {
-
-/* ====================
-    WIDE: CSS3 Effects
-   ==================== */
-
-    .header-container,
-    .main aside {
-        -webkit-box-shadow: 0 5px 10px #aaa;
-           -moz-box-shadow: 0 5px 10px #aaa;
-                box-shadow: 0 5px 10px #aaa;
-    }
-
-/* ============
-    WIDE: Menu
-   ============ */
-
-    .title {
-        float: left;
-    }
-
-    nav {
-        float: right;
-        width: 38%;
-    }
-
-/* ============
-    WIDE: Main
-   ============ */
-
-    .main article {
-        float: left;
-        width: 57%;
-    }
-
-    .main aside {
-        float: right;
-        width: 28%;
-    }
-}
-
-@media only screen and (min-width: 1140px) {
-
-/* ===============
-    Maximal Width
-   =============== */
-
-    .wrapper {
-        width: 1026px; /* 1140px - 10% for margins */
-        margin: 0 auto;
-    }
-}
-
-/* ==========================================================================
-   Helper classes
-   ========================================================================== */
-
-.hidden {
-    display: none !important;
-    visibility: hidden;
-}
-
-.visuallyhidden {
-    border: 0;
-    clip: rect(0 0 0 0);
-    height: 1px;
-    margin: -1px;
-    overflow: hidden;
-    padding: 0;
-    position: absolute;
-    width: 1px;
-}
-
-.visuallyhidden.focusable:active,
-.visuallyhidden.focusable:focus {
-    clip: auto;
-    height: auto;
-    margin: 0;
-    overflow: visible;
-    position: static;
-    width: auto;
-}
-
-.invisible {
-    visibility: hidden;
-}
-
-.clearfix:before,
-.clearfix:after {
-    content: " ";
-    display: table;
-}
-
-.clearfix:after {
-    clear: both;
-}
-
-.clearfix {
-    *zoom: 1;
-}
-
-/* ==========================================================================
-   Print styles
-   ========================================================================== */
-
-@media print {
-    *,
-    *:before,
-    *:after {
-        background: transparent !important;
-        color: #000 !important;
-        box-shadow: none !important;
-        text-shadow: none !important;
-    }
-
-    a,
-    a:visited {
-        text-decoration: underline;
-    }
-
-    a[href]:after {
-        content: " (" attr(href) ")";
-    }
-
-    abbr[title]:after {
-        content: " (" attr(title) ")";
-    }
-
-    a[href^="#"]:after,
-    a[href^="javascript:"]:after {
-        content: "";
-    }
-
-    pre,
-    blockquote {
-        border: 1px solid #999;
-        page-break-inside: avoid;
-    }
-
-    thead {
-        display: table-header-group;
-    }
-
-    tr,
-    img {
-        page-break-inside: avoid;
-    }
-
-    img {
-        max-width: 100% !important;
-    }
-
-    p,
-    h2,
-    h3 {
-        orphans: 3;
-        widows: 3;
-    }
-
-    h2,
-    h3 {
-        page-break-after: avoid;
-    }
+  }
+
+  .container > *:first-child {
+    margin-top: 0;
+  }
+
+  .section.main {
+    width: 49%;
+  }
+
+  .logo {
+    background-image: url(../img/vertigo-logo.png);
+  }
+
+  .icon-pin {
+    background-image: url(../img/icon-pin.png);
+  }
+
+  .icon-facebook {
+    background-image: url(../img/icon-facebook.png);
+  }
+
+  .icon-instagram {
+    background-image: url(../img/icon-instagram.png);
+  }
+
+  .icon-phone {
+    background-image: url(../img/icon-phone.png);
+  }
 }
